# surf-forecast-flask

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: full-workflow.yml
src/: api_schema.json  config.py  logger.py  server.py
src/clients/: storm_glass.py
src/clients/tests/: conftest.py  test_unit.py
src/controllers/: __init__.py  beaches.py  forecast.py  users.py
src/middlewares/: auth.py
src/middlewares/tests/: conftest.py  test_auth.py
src/models/: beach.py  user.py
src/services/: auth.py  forecast.py  rating.py
src/services/tests/: test_forecast.py  test_rating.py
src/utils/: request.py  time.py
src/utils/errors/: api_error.py  internal_error.py
src/utils/errors/test/: test_api_error.py
tests/: conftest.py
tests/functional/: test_beach.py  test_forecast.py  test_user.py
